Bug 122656 - UI: Items are skipped when moving through the Fontwork Gallery with arrow keys
Summary: UI: Items are skipped when moving through the Fontwork Gallery with arrow keys
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2019-01-11 16:16 UTC by Telesto
Modified: 2019-01-16 23:07 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2019-01-11 16:16:01 UTC
Description:
UI: Items are skipped when moving through the Fontwork Gallery with arrow keys

Steps to Reproduce:
1. Open Writer
2. Open the font work dialog
3. Press arrow up/down left right 

Actual Results:
Items are skipped

Expected Results:
No skipping


Reproducible: Always


User Profile Reset: No



Additional Info:
Found in
Version: 6.3.0.0.alpha0+
Build ID: 6e5c4001c7b5cab2b2cc6419072acbe5fa7cb04a
CPU threads: 4; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL

but not in
Versie: 4.4.7.2 
Build ID: f3153a8b245191196a4b6b9abd1d0da16eead600
Locale: nl_NL
Comment 1 Durgapriyanka 2019-01-11 16:51:19 UTC
Thank you for reporting this bug. I can confirm this bug in

Version: 6.3.0.0.alpha0+
Build ID: 3c964980da07892a02d5ac721d80558c459532d0
CPU threads: 2; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2018-12-12_02:07:45
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded
Comment 2 raal 2019-01-14 14:01:05 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one? Thanks
 361b6df905790cea07b33295f656e296d6530bbb is the first bad commit
commit 361b6df905790cea07b33295f656e296d6530bbb
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Wed Dec 5 09:42:14 2018 -0800

    source 9c5d20105f0b123fca724cb4845f0e7227c217d8
authorCaolán McNamara <caolanm@redhat.com>2018-11-29 20:11:34 +0000 committerCaolán McNamara <caolanm@redhat.com>2018-12-01 22:37:22 +0100 commit9c5d20105f0b123fca724cb4845f0e7227c217d8 (patch) tree00481857132abda3963231c181e04ab2321d0d61 parent4e0be0c35024fc35d4815d2665e12f9ebf241025 (diff)
weld OfaAutoCompleteTabPage
Comment 3 Telesto 2019-01-14 15:05:51 UTC
@Caolán 
Not sure if you're interested, but there is another small bug related to the Fontwork Dialog (bug 35152):
1. Open FontWork dialog
2. Press Enter -> No Fontwork applied
Comment 4 Telesto 2019-01-14 15:38:49 UTC
Note 2:
The same issue also exists in the bullets & numbering dialog (bullets & numbering tab)
Comment 5 Caolán McNamara 2019-01-14 21:03:55 UTC
KeyEvent handled twice
Comment 6 Commit Notification 2019-01-15 08:53:53 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9c3faeae633f0c1efea199e522d2413461b16345%5E%21

Resolves: tdf#122656 keypress handled twice

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Caolán McNamara 2019-01-15 08:56:32 UTC
backport to 6-2 in gerrit
Comment 8 Xisco Faulí 2019-01-16 15:44:23 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 9c3faeae633f0c1efea199e522d2413461b16345
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: x11; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, Thanks for fixing this!!
Comment 9 Commit Notification 2019-01-16 16:26:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/86915eb7a0dd33d6633a3eded3f3e82cb892e0a1%5E%21

Resolves: tdf#122656 keypress handled twice

It will be available in 6.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.