Resolves: tdf#122656 keypress handled twice

Change-Id: I8a9ec82d46a3df04554c139264755c8f28f5e897